Added elements in the javascript

--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
   <title>Document</title>
   <script src='js/index.js'></script>
   <link rel='stylesheet' href='index.css'/>
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
   <div id='main'>
 
-    <h2>GitHub Search</h2>
+    <h2><i class='bx bxl-github' ></i>GitHub Search</h2>
 
     <form id='github-form'>
       <input id='search' type='text' name='search'>
       <input type='submit' name='submit'/>
     </form>
-
     <div id='github-container'>
       <ul id='user-list'>
 
@@ -28,6 +28,6 @@
     </div>
 
   </div>
-
+<script src="./js/index.js"></script>
 </body>
 </html>
